# fastapi-tutorial

./: .gitignore  README.md  pyproject.toml
src/: FilterParams.py  Item.py  User.py  baseuser.py  commonheaders.py  config.py  cookies.py  formdata.py  insecure_main.py  main.py  main_old.py  main_security.py  offer.py  queryparam.py  unicornexception.py
src/app/: dependencies.py  test_main.py
src/app/internals/: admin.py
src/app/routers/: items.py  users.py
