[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "John Lunz",email = "johnlunz8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)"
]

[tool.poetry]
packages = [{include = "fastapi_demo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
